Implemeted selfrun.sh for Windows